--- a/style.css
+++ b/style.css
@@ -4,3 +4,9 @@ button {
     font-size: 30px;
     font-style: bold;
 }
+
+div {
+    display: block;
+    font-size: 30px;
+    font-style: bold;
+}
